syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license.priv;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/marketplace/licenseserver/v1/license/instance.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license/priv;priv";
option java_package = "PIS";

service InstanceService {
    rpc Get(GetInstanceRequest) returns (Instance);

    rpc List(ListInstanceRequest) returns (ListInstanceResponse);

    rpc Cancel(CancelInstanceRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "CancelInstanceMetadata"
            response: "Instance"
        };
    }

    rpc Deprecate(DeprecateInstanceRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "DeprecateInstanceMetadata"
            response: "Instance"
        };
    }

    rpc Delete(DeleteInstanceRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "DeleteInstanceMetadata"
            response: "google.protobuf.Empty"
        };
    }
}

message GetInstanceRequest {
    string id = 1 [(required) = true];
}

message ListInstanceRequest {
    string cloud_id = 1 [(required) = true];
    int64 page_size = 2;
    string page_token = 3;
}

message ListInstanceResponse {
    repeated Instance instances = 1;
    string next_page_token = 2;
}

message CancelInstanceRequest {
    string id = 1 [(required) = true];
}

message CancelInstanceMetadata {
    string instance_id = 1;
}

message DeprecateInstanceRequest {
    string id = 1 [(required) = true];
}

message DeprecateInstanceMetadata {
    string instance_id = 1;
}

message DeleteInstanceRequest {
    string id = 1 [(required) = true];
}

message DeleteInstanceMetadata {
    string instance_id = 1;
}
